# DjangoProd

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
project/: settings.py  urls.py
src/project/: settings.py  urls.py  views.py
src/visits/: admin.py  models.py
src/visits/migrations/: 0001_initial.py
